# paladin98

./: CMakeLists.txt  README.md  vcpkg.json
.github/: .dependabot
.github/workflows/: ci-ubuntu.yml
include/: error_codes.hpp
src/: main.cpp
src/graphics/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/window/: window.cpp  window.hpp
